--- a/src/Component/Navbar/Profile/DeliveryDashBoard/ReturnDelivery/ReturnDeliver.module.css
+++ b/src/Component/Navbar/Profile/DeliveryDashBoard/ReturnDelivery/ReturnDeliver.module.css
@@ -6,18 +6,43 @@
   margin-right: auto;
   overflow-x: auto;
 }
+.rrrr{
+  background-color: #BF0A2A;
+  padding: 5px 10px;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;}
 
 .orderHistoryTable {
   width: 100%;
 }
 
 .orderCard {
-  width: 18rem;
+  width: 28rem;
 }
 
 .addressSection {
   display: flex;
   flex-direction: column;
+
+
+}
+.dddd{
+  color: #BF0A2A;
+  font-weight: 700;
+}
+.gap{
+  background-color: #BF0A2A;
+  margin-top: 2rem;
+  height: .2rem;
+}
+.topic .addressSection{
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
 }
 
 .addressSection p {
@@ -37,10 +62,10 @@
     width: 100%;
   }
 }
-.tableWrapper{
+/* .tableWrapper{
   margin-top: 5rem;
-  margin-left: 2rem;
-}
+  margin-left: 10rem;
+} */
 @media (max-width: 767px) {
   .orderCard {
     width: 100%;
@@ -115,8 +140,7 @@
 @media (max-width: 598px) {
   .tableWrapper {
     margin-top: 0rem;
-    width:27rem;
-    margin-left: -13.6rem;
+    margin-left: -1rem;
   }
   .imges{
     width: 15rem;
@@ -124,54 +148,21 @@
   }
 
 }
-/* Styles for the modal overlay */
-.address-modal-overlay {
-  /* Position and visibility */
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* Styles for the modal content */
-.address-modal {
-  /* Position and size */
-  position: relative;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  background-color: #fff;
-  max-width: 80%;
-  max-height: 80%;
-  overflow-y: auto;
-  padding: 20px;
-  border-radius: 5px;
-}
-
-/* Media query for smaller screens */
-@media (max-width: 600px) {
-  .address-modal {
-    max-width: 95%;
-    max-height: 95%;
-  }
-}
-.jjjj{
-  /* width: 10rem; */
-  width: 15rem;
-  margin-left: 10rem;
-  margin-top: 5rem;
-  background-color: rgb(144, 184, 203);
-}
-.button {
+.utton{
   padding: 5px 10px;
-  background-color: #be489e;
   color: #fff;
   border: none;
-  /* margin-left: 10rem; */
+  border-radius: 3px;
+  cursor: pointer;
+  background-color: #BF0A2A;
+
+}
+.button {
+  background-color: #BF0A2A;
+
+  padding: 5px 10px;
+  color: #fff;
+  border: none;
   border-radius: 3px;
   cursor: pointer;
 }
@@ -203,6 +194,120 @@
   margin-bottom: 20px;
 }
 
+
+
+
+.topic{
+  display: flex;
+  border: 3px solid #ffff;
+  border-radius: 0px;
+  padding: 10px;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  position: relative;
+}
+/* .topic .topicinfo{
+    margin: 0;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+  
+} */
+.ssss {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+  color: #BF0A2A;
+  font-weight: 700;
+  margin-top: -3rem;
+
+}
+.topic .topicinfo{
+  margin: 0;
+  margin-left: 6rem;
+  margin-top: 8rem;
+
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+}
+.branddd{
+  margin-top: -8rem;
+  margin-left: -6rem;
+}
+.topic .topicinfos{
+  margin: 0;
+  margin-left: 3rem;
+  margin-top: 6rem;
+  white-space: nowrap;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+}
+.topic .topicinfossss{
+  margin: 0;
+  margin-left: 3rem;
+  margin-top: 6rem;
+  white-space: nowrap;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+}
+.topic .topicinfoss{
+  margin: 0;
+  margin-left: 4rem;
+  margin-top: 8rem;
+  white-space: nowrap;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+}
+.topic h6 {
+  margin: 0;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+  top: 0;
+}
+
+.topicinfo {
+  display: flex;
+}
+
+
+.topic img{
+  width: 150px;
+  height: 150px;
+}
+
+.topic1{
+  display: flex;
+  border: 2px solid rgb(17, 17, 17);
+  border-radius: 0px;
+  padding: 10px;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  align-items: center;
+  position: relative;
+}
+
+
+
+.fjfj{
+  background: #BF0A2A;
+  padding: 5px 5px;
+  color: #fff;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;}
 .closeButton {
   padding: 5px 10px;
   background-color: #dc3545;
@@ -210,4 +315,68 @@
   border: none;
   border-radius: 3px;
   cursor: pointer;
+}
+
+@media (max-width: 600px) {
+  .orderCard {
+    width: 24rem;
+  }
+  .topic .topicinfo{
+    margin: 0;
+    /* margin-left: 6rem; */
+    margin-top: 15rem;
+  margin-left: -1.5rem;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+  }
+  .topicinfo {
+    display: flex;
+  }
+  .topic1{
+    display: flex;
+    border: 2px solid rgb(17, 17, 17);
+    border-radius: 0px;
+    padding: 10px;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    align-items: center;
+    position: relative;
+    margin-top: 8rem;
+  }
+  .topic .topicinfos{
+    margin: 0;
+    margin-left: -6rem;
+    margin-top: 13rem;
+    white-space: nowrap;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+  }
+  .topic .topicinfossss{
+    margin: 0;
+    margin-left: -6rem;
+    margin-top: 14rem;
+    white-space: nowrap;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+  }
+  .branddd{
+    margin-top: -6rem;
+    margin-left: -4rem;
+  }
+  .topic .topicinfoss{
+    margin: 0;
+    margin-left: -4rem;
+    margin-top: 16rem;
+    white-space: nowrap;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    top: 0;
+  }
 }
