--- a/src/Component/Header/Home/BigDeals/BigDeals.module.css
+++ b/src/Component/Header/Home/BigDeals/BigDeals.module.css
@@ -1,121 +1,4 @@
-/* .sliderContainer {
-    margin: 0 auto;
-    max-width: 1600px;
-    padding: 0 20px;
-    height: 600px;
-  
-  }
-  
-  .card {
-   
-    display: flex;
-    flex-direction: column;
-    width: 16rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color:#fff;
-    height: 400px;
-    width: 500px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
-    
-  }
-  .bg{
-    background-color: #fff;
-    margin-top: 1rem;
-  
-  }
-  
-  .card img {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: 25rem;
-    width: 600px;
-  }
- 
-  @media only screen and (max-width: 768px) {
-    
-  
-    .card img {
-      height: 25rem;
-      border-radius: 10px 10px 0 0;
-    }
-  }
-  @media only screen and (max-width: 589px) {
-    .card {
-      width: 14rem;
-    }
-  
-    .card img {
-      height: 20rem;
-      border-radius: 10px 10px 0 0;
-    }
-    .seeMore{
-      margin-left: 10rem;
-    }
-  }
-  .card h2 {
-    font-size: 24px;
-    margin-top: 20px;
-  }
-  
-  .card p {
-    font-size: 16px;
-    margin-top: 10px;
-  }
-  
 
-  .control-btn button {
-    background: white;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.5s;
-    padding: 2px;
-  }
-  
-  .control-btn .next {
-    position: absolute;
-    top: 40%;
-    right: 20px;
-  }
-  
-  .control-btn .prev {
-    position: absolute;
-    top: 40%;
-    left: 20px;
-    z-index: 99;
-  }
-  .control-btn .icon {
-    font-size: 25px;
-  }
-  
-  .prices{
-    margin-left: 0.5rem;
-    margin-top: -1rem;
-    
-  }
-  
-  .description{
-    margin-top: -.7rem;
-    margin-left: 0.5rem;
-  
-  }
-  .title{
-    margin-left: 0.5rem;
-    font-weight:lighter
-    ;
-  
-  } */
-
-
-  
 .sliderContainer {
   margin: 0 auto;
   max-width: 1600px;
@@ -140,7 +23,7 @@
 }
 .bg{
   background-color: #fff;
-  margin-top: 1rem;
+
 
 }
 
@@ -154,8 +37,30 @@
 /* .seeMore{
   margin-left: 35rem;
 } */
+@media only screen and (max-width: 768px) {
+  /* .card {
+    width: 100%;
+    height: auto;
+  } */
 
+  .card img {
+    height: 25rem;
+    border-radius: 10px 10px 0 0;
+  }
+}
+@media only screen and (max-width: 589px) {
+  .card {
+    width: 14rem;
+  }
 
+  .card img {
+    height: 20rem;
+    border-radius: 10px 10px 0 0;
+  }
+  .seeMore{
+    margin-left: 10rem;
+  }
+}
 .card h2 {
   font-size: 24px;
   margin-top: 20px;
@@ -213,61 +118,10 @@
 }
 .title{
   margin-left: 0.5rem;
-  font-weight:bold
-  ;
+  font-weight:bold;
+  margin-top: 50px;
 
 }
-
-
-
-@media only screen and (max-width: 867px) {
- 
-  .card .img {
-    height: 200rem;
-    border-radius: 10px 10px 0 0;
-  }
-  .seeMore{
-    margin-left: 10rem;
-  }
-  .sliderContainer {
-    margin: 0 auto;
-    max-width: 160px;
-    padding: 0 20px;
-    height: 40px;
-  
-  }
-  
-  .card {
-   
-    display: flex;
-    flex-direction: column;
-  
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    background-color:#fff;
-    height: 200px;
-    width: 520px;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(34, 9, 9, 0.878);
-    
-  }
-  .bg{
-    background-color: #fff;
-    margin-top: 1rem;
-  
-  }
-  
-  .card img {
-    display: block;
-    margin: 0 auto;
-    height: 5rem;
-    width: 50px;
-  }
-  .customerheading{
-    width: 10px;
-  }
-}
-
 
 
 @media (max-width: 1280px){
