--- a/src/Component/Test/Test.module.css
+++ b/src/Component/Test/Test.module.css
@@ -72,11 +72,58 @@ font-weight: bold;
 .five{
     height: 400px;
     width: 90%;
-    background: #034100;
+    background: #F7FBFF;
     margin: auto;
+    display: flex;
+    flex-direction: row;
 }
 .stepper{
     height: 100%;
     width: 40%;
-    background-color: red;
+    background-color: white;
 }
+.prevOrder{
+    background-color: white;
+    width: 50%;
+    height: 100%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.table1{
+   
+    display: flex;
+    flex-direction: row;
+}
+
+@media only screen and (max-width: 600px) {
+    
+    .headingdiv{
+        height: 50px;
+        display: flex;
+        align-items: center;
+        width: 90%;
+        background-color: white;
+        padding-left: 20px;
+        margin-top: 20px;
+        margin: auto;
+        
+    }
+    .line{
+        display: none;
+    }
+    .productdetailDiv{
+        height: 250px;
+        width: 100%;
+        background-color: white;
+        margin: auto;
+        margin-top: 20px;
+       
+    }
+    .table1{
+   
+        display: flex;
+        flex-direction: column;
+    }
+  }
